[package]
name = "MqttMonitor"
version = "0.1.0"
authors = ["Glenn Pierce <glenn.pierce@carnegosystems.com>"]

[dependencies]
failure = "*"
pretty_env_logger = "0.1.0"
ctrlc = { version = "3.0", features = ["termination"] }
lazy_static = "0.2.4"
log = "*"
rusqlite = "*"
time = "0.1.37"
clap = "1.2.5"
chrono = "0.4"
fern = "*"
backtrace = "*"
rumqtt = "0.10.1"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"

[[bin]]
name = "mqtt_monitor"
path = "src/bin.rs"
